rollback: change `jdk` to `17.0.1`